[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
hyper = "0.14.26"
reqwest = "0.11.18"
reverse-proxy-service = { version = "0.2.0", features = ["axum", "https"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
chrono = "0.4.24"
uuid = "1.3.3"